--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,16 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+api/target/
+api/src/main/java/META-INF/
+/api/src/main/resources/application-local.properties
+
+
+# IDE
+.idea
+*.iml
+api/src/main/resources/*.http
+api/*.iml
+.envrc
+shell.nix
+Session.vim
