--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.mvc.log-request-details=${SPRING_SHOW_REQUEST_DETAILS}
 
 #DB Properties
 spring.datasource.url=${JDBC_URL}
-spring.datasource.username=${ORACLE_USERNAME}
-spring.datasource.password=${ORACLE_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
@@ -57,11 +57,8 @@ initialization.background.enabled=true
 
 threads.min.subscriber=${THREADS_MIN_SUBSCRIBER}
 threads.max.subscriber=${THREADS_MAX_SUBSCRIBER}
-sagas.max.pending=${SAGAS_MAX_PENDING}
-sagas.max.parallel=${SAGAS_MAX_PARALLEL}
 
 url.api.institute=${INSTITUTE_API_URL}
-url.api.edx=${EDX_API_URL}
 schedule.jobs.load.school.cron=0 0 0/12 * * *
 
 spring.datasource.hikari.maximum-pool-size=${MAXIMUM_DB_POOL_SIZE}
