--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
       src/main/java/ca/bc/gov/educ/eas/api/model/**,
       src/main/java/ca/bc/gov/educ/eas/api/struct/**
     </sonar.exclusions>
-    <java.version>18</java.version>
+    <java.version>21</java.version>
 
     <maven.compiler.version>3.10.1</maven.compiler.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -30,7 +30,7 @@
     <shedlock.version>4.20.0</shedlock.version>
     <springdoc.version>1.6.9</springdoc.version>
     <nats.version>2.11.0</nats.version>
-    <ojdbc.version>21.3.0.0</ojdbc.version>
+    <postgresql.version>42.7.3</postgresql.version>
     <guava.version>33.2.1-jre</guava.version>
     <flatpack.version>4.0.4</flatpack.version>
     <faker.varion>0.15</faker.varion>
@@ -89,9 +89,9 @@
       <artifactId>flyway-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.oracle.database.jdbc</groupId>
-      <artifactId>ojdbc11</artifactId>
-      <version>${ojdbc.version}</version>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgresql.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
