--- a/.github/workflows/ci-api.build.and.test.yml
+++ b/.github/workflows/ci-api.build.and.test.yml
@@ -47,6 +47,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL'
+          image-ref: ''
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
         with:
