--- a/.github/workflows/deploy-to.openshift-dev-and-test.yml
+++ b/.github/workflows/deploy-to.openshift-dev-and-test.yml
@@ -169,11 +169,11 @@ jobs:
         curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/master/tools/config/update-configmap.sh | bash /dev/stdin dev ${{ env.APP_NAME }} ${{ env.NAMESPACE }} ${{ env.COMMON_NAMESPACE }} ${{ env.DB_JDBC_CONNECT_STRING }} ${{ env.DB_PWD }} ${{ env.DB_USER }} ${{ env.SPLUNK_TOKEN }} 
         
         # Start rollout (if necessary) and follow it
-        oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
+        oc rollout latest deployment/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
         || true && echo "Rollout in progress"
-        oc logs -f dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+        oc logs -f deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
         # Get status, returns 0 if rollout is successful
-        oc rollout status dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+        oc rollout status deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
 
     - name: ZAP Scan
       uses: zaproxy/action-api-scan@v0.7.0
@@ -256,11 +256,11 @@ jobs:
           curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/master/tools/config/update-configmap.sh | bash /dev/stdin test ${{ env.APP_NAME }} ${{ env.NAMESPACE }} ${{ env.COMMON_NAMESPACE }} ${{ env.DB_JDBC_CONNECT_STRING }} ${{ env.DB_PWD }} ${{ env.DB_USER }} ${{ env.SPLUNK_TOKEN }} ${{ env.CHES_CLIENT_ID }} ${{ env.CHES_CLIENT_SECRET }} ${{ env.CHES_TOKEN_URL }} ${{ env.CHES_ENDPOINT_URL }}
 
           # Start rollout (if necessary) and follow it
-          oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
+          oc rollout latest deployment/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
           || true && echo "Rollout in progress"
-          oc logs -f dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+          oc logs -f deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
           # Get status, returns 0 if rollout is successful
-          oc rollout status dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+          oc rollout status deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
 
       - name: ZAP Scan
         uses: zaproxy/action-api-scan@v0.7.0
