--- a/.github/workflows/deploy-to.openshift-prod.yml
+++ b/.github/workflows/deploy-to.openshift-prod.yml
@@ -127,8 +127,8 @@ jobs:
         curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/${{ steps.get-latest-tag.outputs.tag }}/tools/config/update-configmap.sh | bash /dev/stdin ${{ env.TARGET_ENV }} ${{ env.APP_NAME }} ${{ env.NAMESPACE }} ${{ env.COMMON_NAMESPACE }} ${{ env.DB_JDBC_CONNECT_STRING }} ${{ env.DB_PWD }} ${{ env.DB_USER }} ${{ env.SPLUNK_TOKEN }}
         
         # Start rollout (if necessary) and follow it
-        oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
+        oc rollout latest deployment/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
         || true && echo "Rollout in progress"
-        oc logs -f dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+        oc logs -f deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
         # Get status, returns 0 if rollout is successful
-        oc rollout status dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+        oc rollout status deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
