--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.mvc.log-request-details=${SPRING_SHOW_REQUEST_DETAILS}
 
 #DB Properties
 spring.datasource.url=${JDBC_URL}
-spring.datasource.username=${JDBC_USERNAME}
-spring.datasource.password=${JDBC_PASSWORD}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
