--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,7 +26,7 @@
     <maven.compiler.version>3.13.0</maven.compiler.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
+    <org.mapstruct.version>1.6.2</org.mapstruct.version>
     <shedlock.version>4.20.0</shedlock.version>
     <springdoc.version>1.6.9</springdoc.version>
     <nats.version>2.11.0</nats.version>
