--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,7 +27,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <org.mapstruct.version>1.6.2</org.mapstruct.version>
-    <shedlock.version>4.20.0</shedlock.version>
+    <shedlock.version>5.16.0</shedlock.version>
     <springdoc.version>1.6.9</springdoc.version>
     <nats.version>2.11.0</nats.version>
     <postgresql.version>42.7.3</postgresql.version>
@@ -86,6 +86,10 @@
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-database-postgresql</artifactId>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
