--- a/.github/workflows/deploy-to.openshift-dev-and-test.yml
+++ b/.github/workflows/deploy-to.openshift-dev-and-test.yml
@@ -38,7 +38,7 @@ env:
   MAX_REPLICAS_DEV: "2"
   MIN_REPLICAS_TEST: "1"
   MAX_REPLICAS_TEST: "2"
-  MIN_CPU: "450m"
+  MIN_CPU: "500m"
   MAX_CPU: "1"
   MIN_MEM: "1000Mi"
   MAX_MEM: "1200Mi"
@@ -255,8 +255,8 @@ jobs:
           curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/master/tools/config/update-configmap.sh | bash /dev/stdin test ${{ env.APP_NAME }} ${{ env.NAMESPACE }} ${{ env.COMMON_NAMESPACE }} ${{ env.DB_JDBC_CONNECT_STRING }} ${{ env.DB_PWD }} ${{ env.DB_USER }} ${{ env.SPLUNK_TOKEN }} ${{ env.CHES_CLIENT_ID }} ${{ env.CHES_CLIENT_SECRET }} ${{ env.CHES_TOKEN_URL }} ${{ env.CHES_ENDPOINT_URL }}
 
           # Start rollout (if necessary) and follow it
-          oc rollout latest deployment/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
-          || true && echo "Rollout in progress"
+          # Restart the deployment to recreate pods
+          oc rollout restart deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
           # Get status, returns 0 if rollout is successful
           oc rollout status deployments/${{ env.SPRING_BOOT_IMAGE_NAME }}
 
