Saga changes to publish registrations to downstream system.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -68,3 +68,8 @@ purge.records.saga.after.days=${PURGE_RECORDS_SAGA_AFTER_DAYS}
 scheduled.jobs.purge.old.saga.records.cron=${SCHEDULED_JOBS_PURGE_OLD_SAGA_RECORDS_CRON}
 
 server.max-http-request-header-size=2MB
+
+number.students.publish.saga=50
+scheduled.jobs.publish.loaded.eas.students.cron=-
+scheduled.jobs.publish.loaded.eas.students.cron.lockAtLeastFor=-
+scheduled.jobs.publish.loaded.eas.students.cron.lockAtMostFor=-
