Small prop update

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.root=ERROR
 logging.level.org.hibernate=ERROR
-logging.level.ca.bc.gov.educ.studentdatacollection=INFO
+logging.level.ca.bc.gov.educ.eas=INFO
 #spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.show-sql=false
 # SQL statements and parameters
