--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #logging Properties
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL}
 logging.level.org.springframework.web=${SPRING_WEB_LOG_LEVEL}
-logging.level.ca.bc.gov.educ.studentdatacollection=${APP_LOG_LEVEL}
+logging.level.ca.bc.gov.educ.eas=${APP_LOG_LEVEL}
 logging.level.org.springframework.boot.autoconfigure.logging=${SPRING_BOOT_AUTOCONFIG_LOG_LEVEL}
 spring.mvc.log-request-details=${SPRING_SHOW_REQUEST_DETAILS}
 
