Updated properties to map from configmap.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -70,6 +70,6 @@ scheduled.jobs.purge.old.saga.records.cron=${SCHEDULED_JOBS_PURGE_OLD_SAGA_RECOR
 server.max-http-request-header-size=2MB
 
 number.students.publish.saga=50
-scheduled.jobs.publish.loaded.eas.students.cron=-
-scheduled.jobs.publish.loaded.eas.students.cron.lockAtLeastFor=-
-scheduled.jobs.publish.loaded.eas.students.cron.lockAtMostFor=-
+scheduled.jobs.publish.loaded.eas.students.cron=${SCHEDULED_JOBS_PUBLISH_LOADED_EAS_STUDENTS_CRON}
+scheduled.jobs.publish.loaded.eas.students.cron.lockAtLeastFor=${SCHEDULED_JOBS_PUBLISH_LOADED_EAS_STUDENTS_CRON_LOCK_AT_LEAST_FOR}
+scheduled.jobs.publish.loaded.eas.students.cron.lockAtMostFor=${SCHEDULED_JOBS_PUBLISH_LOADED_EAS_STUDENTS_CRON_LOCK_AT_MOST_FOR}
