Functionality in place

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -73,3 +73,7 @@ number.students.publish.saga=50
 scheduled.jobs.publish.loaded.eas.students.cron=${SCHEDULED_JOBS_PUBLISH_LOADED_EAS_STUDENTS_CRON}
 scheduled.jobs.publish.loaded.eas.students.cron.lockAtLeastFor=${SCHEDULED_JOBS_PUBLISH_LOADED_EAS_STUDENTS_CRON_LOCK_AT_LEAST_FOR}
 scheduled.jobs.publish.loaded.eas.students.cron.lockAtMostFor=${SCHEDULED_JOBS_PUBLISH_LOADED_EAS_STUDENTS_CRON_LOCK_AT_MOST_FOR}
+
+scheduled.jobs.setup.sessions.cron=${SCHEDULED_JOBS_SETUP_SESSIONS_CRON}
+scheduled.jobs.setup.sessions.cron.lockAtLeastFor=${SCHEDULED_JOBS_SETUP_SESSIONS_CRON_LOCK_AT_LEAST_FOR}
+scheduled.jobs.setup.sessions.cron.lockAtMostFor=${SCHEDULED_JOBS_SETUP_SESSIONS_CRON_LOCK_AT_MOST_FOR}
