--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -45,3 +45,7 @@ number.students.publish.saga=50
 scheduled.jobs.publish.loaded.eas.students.cron=-
 scheduled.jobs.publish.loaded.eas.students.cron.lockAtLeastFor=-
 scheduled.jobs.publish.loaded.eas.students.cron.lockAtMostFor=-
+
+scheduled.jobs.setup.sessions.cron=-
+scheduled.jobs.setup.sessions.cron.lockAtLeastFor=-
+scheduled.jobs.setup.sessions.cron.lockAtMostFor=-
