Results file load

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-
+timing.initialDelay=1
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${TOKEN_ISSUER_URL}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${TOKEN_ISSUER_URL}/protocol/openid-connect/certs
