--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -19,6 +19,7 @@ url.token=http://abcxyz.com
 url.api.institute=http://abcxyz.com
 schedule.jobs.load.school.cron=-
 
+timing.initialDelay=100000000
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=20
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
