--- a/api/pom.xml
+++ b/api/pom.xml
@@ -41,7 +41,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.2</version>
+    <version>3.3.3</version>
   </parent>
 
   <dependencies>
@@ -174,6 +174,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.zonky.test</groupId>
+      <artifactId>embedded-postgres</artifactId>
+      <version>2.0.7</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.14.1</version>
@@ -208,12 +214,6 @@
       <groupId>net.sf.flatpack</groupId>
       <artifactId>flatpack</artifactId>
       <version>${flatpack.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.javafaker</groupId>
-      <artifactId>javafaker</artifactId>
-      <version>1.0.2</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.awaitility</groupId>
