--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=false
 logging.level.root=ERROR
 logging.level.org.hibernate=ERROR
 logging.level.ca.bc.gov.educ.assessment=INFO
@@ -8,9 +9,17 @@ spring.jpa.show-sql=false
 # SQL statements and parameters
 #logging.level.org.hibernate.type.descriptor.sql=trace
 spring.main.allow-bean-definition-overriding=true
+
+# Disable Spring Boot's Flyway auto-configuration (we handle it manually)
 spring.flyway.enabled=false
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://test
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://test
+
+# PostgreSQL configuration for testing
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.test.database.replace=none
 
 #Client details to get token to make api calls.
 client.id=123
