--- a/api/pom.xml
+++ b/api/pom.xml
@@ -157,7 +157,17 @@
     <dependency>
       <groupId>net.sf.jasperreports</groupId>
       <artifactId>jasperreports-fonts</artifactId>
-      <version>6.21.0</version>
+      <version>7.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jasperreports</groupId>
+      <artifactId>jasperreports-json</artifactId>
+      <version>7.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jasperreports</groupId>
+      <artifactId>jasperreports-pdf</artifactId>
+      <version>7.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
