Load student results

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -69,7 +69,7 @@ scheduled.jobs.purge.old.saga.records.cron=${SCHEDULED_JOBS_PURGE_OLD_SAGA_RECOR
 
 server.max-http-request-header-size=2MB
 
-number.students.publish.saga=50
+number.students.process.saga=${NUMBER_OF_STUDENTS_TO_PROCESS_SAGA}
 scheduled.jobs.publish.loaded.assessment.students.cron=${SCHEDULED_JOBS_PUBLISH_LOADED_ASSESSMENT_STUDENTS_CRON}
 scheduled.jobs.publish.loaded.assessment.students.cron.lockAtLeastFor=${SCHEDULED_JOBS_PUBLISH_LOADED_ASSESSMENT_STUDENTS_CRON_LOCK_AT_LEAST_FOR}
 scheduled.jobs.publish.loaded.assessment.students.cron.lockAtMostFor=${SCHEDULED_JOBS_PUBLISH_LOADED_ASSESSMENT_STUDENTS_CRON_LOCK_AT_MOST_FOR}
