--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -51,7 +51,7 @@ scheduled.jobs.purge.old.saga.records.cron=-
 server.undertow.max-http-post-size=2MB
 url.api.student=http://abcxyz.com
 
-number.students.publish.saga=50
+number.students.process.saga=50
 scheduled.jobs.publish.loaded.assessment.students.cron=-
 scheduled.jobs.publish.loaded.assessment.students.cron.lockAtLeastFor=-
 scheduled.jobs.publish.loaded.assessment.students.cron.lockAtMostFor=-
