--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -53,8 +53,8 @@ url.api.student=http://abcxyz.com
 
 number.students.process.saga=50
 scheduled.jobs.publish.loaded.assessment.students.cron=-
-scheduled.jobs.publish.loaded.assessment.students.cron.lockAtLeastFor=-
-scheduled.jobs.publish.loaded.assessment.students.cron.lockAtMostFor=-
+scheduled.jobs.publish.loaded.assessment.students.cron.lockAtLeastFor=PT2M
+scheduled.jobs.publish.loaded.assessment.students.cron.lockAtMostFor=PT2M
 
 scheduled.jobs.setup.sessions.cron=-
 scheduled.jobs.setup.sessions.cron.lockAtLeastFor=-
