--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -77,3 +77,8 @@ scheduled.jobs.publish.loaded.assessment.students.cron.lockAtMostFor=${SCHEDULED
 scheduled.jobs.setup.sessions.cron=${SCHEDULED_JOBS_SETUP_SESSIONS_CRON}
 scheduled.jobs.setup.sessions.cron.lockAtLeastFor=${SCHEDULED_JOBS_SETUP_SESSIONS_CRON_LOCK_AT_LEAST_FOR}
 scheduled.jobs.setup.sessions.cron.lockAtMostFor=${SCHEDULED_JOBS_SETUP_SESSIONS_CRON_LOCK_AT_MOST_FOR}
+
+scheduled.jobs.extract.uncompleted.sagas.cron=${SCHEDULED_JOBS_EXTRACT_UNCOMPLETED_SAGAS_CRON}
+scheduled.jobs.extract.uncompleted.sagas.cron.lockAtLeastFor=${SCHEDULED_JOBS_EXTRACT_UNCOMPLETED_SAGAS_CRON_LOCK_AT_LEAST_FOR}
+scheduled.jobs.extract.uncompleted.sagas.cron.lockAtMostFor=${SCHEDULED_JOBS_EXTRACT_UNCOMPLETED_SAGAS_CRON_LOCK_AT_MOST_FOR}
+
