--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -59,3 +59,7 @@ scheduled.jobs.publish.loaded.assessment.students.cron.lockAtMostFor=PT2M
 scheduled.jobs.setup.sessions.cron=-
 scheduled.jobs.setup.sessions.cron.lockAtLeastFor=-
 scheduled.jobs.setup.sessions.cron.lockAtMostFor=-
+
+scheduled.jobs.extract.uncompleted.sagas.cron=-
+scheduled.jobs.extract.uncompleted.sagas.cron.lockAtLeastFor=PT4M
+scheduled.jobs.extract.uncompleted.sagas.cron.lockAtMostFor=PT4M
