scheduler to remove data from staging table

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -82,3 +82,8 @@ scheduled.jobs.extract.uncompleted.sagas.cron=${SCHEDULED_JOBS_EXTRACT_UNCOMPLET
 scheduled.jobs.extract.uncompleted.sagas.cron.lockAtLeastFor=${SCHEDULED_JOBS_EXTRACT_UNCOMPLETED_SAGAS_CRON_LOCK_AT_LEAST_FOR}
 scheduled.jobs.extract.uncompleted.sagas.cron.lockAtMostFor=${SCHEDULED_JOBS_EXTRACT_UNCOMPLETED_SAGAS_CRON_LOCK_AT_MOST_FOR}
 
+scheduled.jobs.purge.completed.results.cron=${SCHEDULED_JOBS_PURGE_COMPLETED_RESULTS_FROM_STAGING_CRON}
+scheduled.jobs.purge.completed.results.cron.lockAtLeastFor=${SCHEDULED_JOBS_PURGE_COMPLETED_RESULTS_FROM_STAGING_CRON_LOCK_AT_LEAST_FOR}
+scheduled.jobs.purge.completed.results.cron.lockAtMostFor=${SCHEDULED_JOBS_PURGE_COMPLETED_RESULTS_FROM_STAGING_CRON_LOCK_AT_MOST_FOR}
+
+
