--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -63,3 +63,7 @@ scheduled.jobs.setup.sessions.cron.lockAtMostFor=-
 scheduled.jobs.extract.uncompleted.sagas.cron=-
 scheduled.jobs.extract.uncompleted.sagas.cron.lockAtLeastFor=PT4M
 scheduled.jobs.extract.uncompleted.sagas.cron.lockAtMostFor=PT4M
+
+scheduled.jobs.purge.completed.results.cron=-
+scheduled.jobs.purge.completed.results.cron.lockAtLeastFor=PT4M
+scheduled.jobs.purge.completed.results.cron.lockAtMostFor=PT4M
