Completed email send to MyEd on approval

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -86,4 +86,12 @@ scheduled.jobs.purge.completed.results.cron=${SCHEDULED_JOBS_PURGE_COMPLETED_RES
 scheduled.jobs.purge.completed.results.cron.lockAtLeastFor=${SCHEDULED_JOBS_PURGE_COMPLETED_RESULTS_FROM_STAGING_CRON_LOCK_AT_LEAST_FOR}
 scheduled.jobs.purge.completed.results.cron.lockAtMostFor=${SCHEDULED_JOBS_PURGE_COMPLETED_RESULTS_FROM_STAGING_CRON_LOCK_AT_MOST_FOR}
 
+email.subject.myed.approval.notification=${EMAIL_SUBJECT_MYED_APPROVAL_NOTIFICATION}
+email.myed.approval.from=${EMAIL_MYED_APPROVAL_NOTIFICATION_FROM}
+email.myed.approval.to=${EMAIL_MYED_APPROVAL_NOTIFICATION_TO}
+email.template.myed.approval.notification=${EMAIL_TEMPLATE_MYED_APPROVAL_NOTIFICATION}
 
+ches.client.id=${CHES_CLIENT_ID}
+ches.client.secret=${CHES_CLIENT_SECRET}
+ches.token.url=${CHES_TOKEN_URL}
+ches.endpoint.url=${CHES_ENDPOINT_URL}
