--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -67,3 +67,13 @@ scheduled.jobs.extract.uncompleted.sagas.cron.lockAtMostFor=PT4M
 scheduled.jobs.purge.completed.results.cron=-
 scheduled.jobs.purge.completed.results.cron.lockAtLeastFor=PT4M
 scheduled.jobs.purge.completed.results.cron.lockAtMostFor=PT4M
+
+ches.endpoint.url=https://test
+ches.client.id=ABC
+ches.client.secret=ABC
+ches.token.url=ABC
+
+email.subject.myed.approval.notification=-
+email.myed.approval.from=-
+email.myed.approval.to=-
+email.template.myed.approval.notification=-
