s3 env and delete files in pod after upload

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -73,6 +73,9 @@ ches.client.id=ABC
 ches.client.secret=ABC
 ches.token.url=ABC
 
+s3.access.key.id=123
+s3.access.secret.key=123
+
 email.subject.myed.approval.notification=-
 email.myed.approval.from=-
 email.myed.approval.to=-
