--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -96,3 +96,6 @@ ches.client.id=${CHES_CLIENT_ID}
 ches.client.secret=${CHES_CLIENT_SECRET}
 ches.token.url=${CHES_TOKEN_URL}
 ches.endpoint.url=${CHES_ENDPOINT_URL}
+
+s3.access.key.id=${S3_ACCESS_KEY_ID}
+s3.access.secret.key=${S3_ACCESS_SECRET_KEY}
