more env and s3 client

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -99,3 +99,5 @@ ches.endpoint.url=${CHES_ENDPOINT_URL}
 
 s3.access.key.id=${S3_ACCESS_KEY_ID}
 s3.access.secret.key=${S3_ACCESS_SECRET_KEY}
+s3.bucket.name=${S3_BUCKET_NAME}
+s3.endpoint.url=${S3_ENDPOINT_URL}
