--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -75,6 +75,8 @@ ches.token.url=ABC
 
 s3.access.key.id=123
 s3.access.secret.key=123
+s3.bucket.name=test-bucket
+s3.endpoint.url=http://localhost:9000
 
 email.subject.myed.approval.notification=-
 email.myed.approval.from=-
