--- a/.github/workflows/deploy-to.openshift-prod.yml
+++ b/.github/workflows/deploy-to.openshift-prod.yml
@@ -26,7 +26,7 @@ env:
   CHES_ENDPOINT_URL: ${{ secrets.CHES_ENDPOINT_URL }}
 
   S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
-  S3_ACCESS_SECRET_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
+  S3_ACCESS_SECRET_KEY: ${{ secrets.S3_ACCESS_SECRET_KEY }}
   S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
   S3_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT_URL }}
 
