--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -68,6 +68,10 @@ scheduled.jobs.purge.completed.results.cron=-
 scheduled.jobs.purge.completed.results.cron.lockAtLeastFor=PT4M
 scheduled.jobs.purge.completed.results.cron.lockAtMostFor=PT4M
 
+scheduled.jobs.process.transfer.students.cron=-
+scheduled.jobs.process.transfer.students.cron.lockAtLeastFor=PT2M
+scheduled.jobs.process.transfer.students.cron.lockAtMostFor=PT2M
+
 ches.endpoint.url=https://test
 ches.client.id=ABC
 ches.client.secret=ABC
