MIN - demog data for psychometrician

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -60,6 +60,7 @@ threads.min.subscriber=${THREADS_MIN_SUBSCRIBER}
 threads.max.subscriber=${THREADS_MAX_SUBSCRIBER}
 
 url.api.institute=${INSTITUTE_API_URL}
+url.api.sdc=${SDC_API_URL}
 schedule.jobs.load.school.cron=0 0 0/12 * * *
 
 spring.datasource.hikari.maximum-pool-size=${MAXIMUM_DB_POOL_SIZE}
