--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -26,6 +26,7 @@ client.id=123
 client.secret=123
 url.token=http://abcxyz.com
 url.api.institute=http://abcxyz.com
+url.api.sdc=http://abcxyz.com
 schedule.jobs.load.school.cron=-
 
 timing.initialDelay=100000000
