--- a/tools/openshift/student-assessment-api.yaml
+++ b/tools/openshift/student-assessment-api.yaml
@@ -117,6 +117,8 @@ objects:
                   readOnly: true
                 - name: log-storage
                   mountPath: /logs
+                - name: app-storage
+                  mountPath: /xam
             - name: "${APP_NAME}-${BRANCH}-fluent-bit-sidecar"
               image: artifacts.developer.gov.bc.ca/docker-remote/fluent/fluent-bit:1.5.7
               imagePullPolicy: Always
