--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -102,3 +102,4 @@ s3.access.key.id=${S3_ACCESS_KEY_ID}
 s3.access.secret.key=${S3_ACCESS_SECRET_KEY}
 s3.bucket.name=${S3_BUCKET_NAME}
 s3.endpoint.url=${S3_ENDPOINT_URL}
+coms.endpoint.url=${COMS_ENDPOINT_URL}
