--- a/.github/workflows/deploy-to.openshift-prod.yml
+++ b/.github/workflows/deploy-to.openshift-prod.yml
@@ -59,7 +59,7 @@ jobs:
   deploy-prod:
     name: Deploy to OpenShift PROD
     runs-on: ubuntu-22.04
-    environment: production
+    environment: prod
 
     steps:
     - name: Check for required secrets
@@ -128,7 +128,7 @@ jobs:
         oc process -f tools/openshift/student-assessment-api.yaml -p APP_NAME=${{ env.APP_NAME }} -p REPO_NAME=${{ env.REPO_NAME }} -p BRANCH=${{ env.BRANCH }} -p NAMESPACE=${{ env.OPENSHIFT_NAMESPACE }} -p TAG=${{ steps.get-latest-tag.outputs.tag }} -p MIN_REPLICAS=${{ env.MIN_REPLICAS }} -p MAX_REPLICAS=${{ env.MAX_REPLICAS }} -p MIN_CPU=${{ env.MIN_CPU }} -p MAX_CPU=${{ env.MAX_CPU }} -p MIN_MEM=${{ env.MIN_MEM }} -p MAX_MEM=${{ env.MAX_MEM }} \
         | oc apply -f -
         
-        curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/master/tools/config/update-configmap.sh | bash /dev/stdin ${{ env.TARGET_ENV }} ${{ env.APP_NAME }} ${{ env.NAMESPACE }} ${{ env.COMMON_NAMESPACE }} ${{ env.DB_JDBC_CONNECT_STRING }} '${{ env.DB_PWD }}' ${{ env.DB_USER }} ${{ env.SPLUNK_TOKEN }} ${{ env.CHES_CLIENT_ID }} ${{ env.CHES_CLIENT_SECRET }} ${{ env.CHES_TOKEN_URL }} ${{ env.CHES_ENDPOINT_URL }} ${{ env.S3_ACCESS_KEY_ID }} ${{ env.S3_ACCESS_SECRET_KEY }} ${{ env.S3_BUCKET_NAME }} ${{ env.S3_ENDPOINT_URL }} ${{ env.SDC_NAMESPACE }} ${{ env.COMS_ENDPOINT_URL }}
+        curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/${{ steps.get-latest-tag.outputs.tag }}/tools/config/update-configmap.sh | bash /dev/stdin ${{ env.TARGET_ENV }} ${{ env.APP_NAME }} ${{ env.NAMESPACE }} ${{ env.COMMON_NAMESPACE }} ${{ env.DB_JDBC_CONNECT_STRING }} '${{ env.DB_PWD }}' ${{ env.DB_USER }} ${{ env.SPLUNK_TOKEN }} ${{ env.CHES_CLIENT_ID }} ${{ env.CHES_CLIENT_SECRET }} ${{ env.CHES_TOKEN_URL }} ${{ env.CHES_ENDPOINT_URL }} ${{ env.S3_ACCESS_KEY_ID }} ${{ env.S3_ACCESS_SECRET_KEY }} ${{ env.S3_BUCKET_NAME }} ${{ env.S3_ENDPOINT_URL }} ${{ env.SDC_NAMESPACE }} ${{ env.COMS_ENDPOINT_URL }}
         
         # Start rollout (if necessary) and follow it
         # Restart the deployment to recreate pods
